# spi-lib

./: CMakeLists.txt  LICENSE  README.md  projects
modules/acquisition/spi/: acq_spi.c
modules/app/framework/: app_argparse.c  app_utils.c
modules/app/main/: main.c
modules/lib/dev_spi/: bgt60_platform_rpi.c  gpio.c  gpio.h  spi.c  spi.h
modules/lib/direct/: SingleReaderSingleWriterRingBuffer.hpp  default_mode_table.c  direct.cpp
modules/lib/direct/driver/: bgt60.c  bgt60.h  bgt60_regs.h
modules/lib/direct/public/: direct.h
modules/lib/direct/public/interface/: bgt60_platform.h
modules/record/plaintext/: rec_plaintext.c
modules/report/console_json/: console_json.c
public/interface/: acquisition.h  app_argparse.h  app_utils.h  record.h  report.h
scripts/cmake/: TargetPlatform.cmake
